# python_backend_23

./: Dockerfile  DockerfileCelery  DockerfileFastapi  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: run-tests.yml
app/: contracts.py  main.py  routers.py
crud/: crud.py
db/: database.py
homework/: tasks.py
homework/app/: main.py  routers.py
homework/crud/: crud.py
homework/db/: database.py
homework/models/: enums.py  models.py
homework/shemas/: homework.py  subject.py  user.py
homework/tasks/: celery.py  tasks.py
models/: models.py
scripts/: run_tests.py
shemas/: homework.py  subject.py  user.py
tests/: integration.py  setup.py  test_tasks.py  unit.py
