[tool.poetry]
name = "python-backend-23"
version = "0.1.0"
description = ""
authors = ["Julie Kosenko <mishakollins68@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = {version = "*"}
sqlalchemy = "^2.0.21"
httpx = "^0.25.0"

[tool.poetry.dev-dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
